--- a/app/src/main/res/layout/activity_enter_mobile.xml
+++ b/app/src/main/res/layout/activity_enter_mobile.xml
@@ -14,42 +14,34 @@
         >
 
 
-        <ProgressBar
-            android:id="@+id/pbLoading"
-            style="@android:style/Widget.Holo.ProgressBar.Small"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/padding_120"
-            android:visibility="gone" />
+    <RelativeLayout
+        android:id="@+id/main_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        >
 
-        <TextView
-            android:id="@+id/txvGetOtp"
+        <ImageView
+            android:id="@+id/imvLogo"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:visibility="visible"
-            android:typeface="monospace"
-            android:layout_alignParentBottom="true"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/padding_120"
-            android:background="@drawable/get_otp_bg"
-            android:elevation="@dimen/padding_5"
-            android:gravity="center"
-            android:paddingLeft="@dimen/padding_50"
-            android:paddingRight="@dimen/padding_50"
-            android:text="@string/get_otp"
-            android:textColor="@color/white"
-            android:textSize="@dimen/app_text_size" />
+            android:contentDescription="@string/app_name"
+            android:scaleType="center"
+            android:src="@drawable/iqmojo_logo" />
+
+
+
 
         <RelativeLayout
             android:id="@+id/rlyMobile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_150"
             android:layout_marginBottom="@dimen/padding_20"
             android:layout_marginLeft="@dimen/left_right_margin_for_edittext"
             android:layout_marginRight="@dimen/left_right_margin_for_edittext"
-            android:layout_above="@id/txvGetOtp"
+            android:layout_below="@id/imvLogo"
             >
 
             <ImageView
@@ -84,20 +76,23 @@
                 android:background="@color/white"/>
 
         </RelativeLayout>
-
-
-        <ImageView
-            android:id="@+id/imvLogo"
+        <TextView
+            android:id="@+id/txvGetOtp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/rlyMobile"
-            android:layout_marginBottom="@dimen/padding_100"
+            android:layout_height="40dp"
+            android:visibility="visible"
+            android:typeface="monospace"
+            android:layout_below="@id/rlyMobile"
             android:layout_centerHorizontal="true"
-            android:contentDescription="@string/app_name"
-            android:scaleType="center"
-            android:src="@drawable/iqmojo_logo" />
+            android:background="@drawable/get_otp_bg"
+            android:elevation="@dimen/padding_5"
+            android:gravity="center"
+            android:paddingLeft="@dimen/padding_50"
+            android:paddingRight="@dimen/padding_50"
+            android:text="@string/get_otp"
+            android:textColor="@color/white"
+            android:textSize="@dimen/app_text_size" />
 
-
-
+        </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
