--- a/app/src/main/res/layout/hamburger_list_item.xml
+++ b/app/src/main/res/layout/hamburger_list_item.xml
@@ -3,6 +3,7 @@
     android:id="@+id/rlyParent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/transparent"
     android:gravity="center"
     android:paddingTop="@dimen/padding_5"
     >
