--- a/app/src/main/res/layout/drawer_layout_navigation.xml
+++ b/app/src/main/res/layout/drawer_layout_navigation.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="@dimen/margin_15"
+        android:layout_marginTop="@dimen/margin_60dp"
         android:padding="@dimen/padding_10">
 
 
