--- a/app/src/main/res/layout/activity_enter_mobile.xml
+++ b/app/src/main/res/layout/activity_enter_mobile.xml
@@ -62,6 +62,7 @@
                 android:layout_toRightOf="@+id/imvMobile"
                 android:gravity="center"
                 android:background="@null"
+                android:maxLength="10"
                 android:hint="@string/enter_your_mobile_number"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
