--- a/app/src/main/res/layout/fragment_my_points.xml
+++ b/app/src/main/res/layout/fragment_my_points.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.iqmojo.iq_mojo.ui.fragments.MyPointsFragment">
+    tools:context="com.iqmojo.iq_mojo.ui.fragments.MyPointsFragment"
+    android:background="@drawable/grey_gradient_bg">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+
+
+
 
 </FrameLayout>
