--- a/app/src/main/res/layout/fragment_my_points.xml
+++ b/app/src/main/res/layout/fragment_my_points.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,8 +6,80 @@
     android:background="@drawable/grey_gradient_bg">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/margin_30dp">
+
+        <ImageView
+            android:id="@+id/img_profile_pic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/profile_pic"/>
+
+        <TextView
+            android:id="@+id/text_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_21sp"
+            android:layout_marginTop="@dimen/margin_7"
+            android:text=""
+            />
+
+        <TextView
+            android:id="@+id/text_rupees"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_7"
+            android:textSize="@dimen/text_size_18sp"
+            android:drawablePadding="@dimen/margin_5"
+            android:drawableLeft="@drawable/pager_00_inactive"
+            android:text="125.26"/>
+
+        <TextView
+            android:id="@+id/text_avail_bal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_15sp"
+            android:text="@string/avail_bal"
+            android:layout_marginTop="@dimen/margin_10"
+            />
+
+    </LinearLayout>
 
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_marginBottom="@dimen/margin_30dp">
 
-</FrameLayout>
+        <Button
+            android:id="@+id/btn_paytm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_21sp"
+            android:background="@drawable/get_otp_bg"
+            android:textColor="#fff"
+            android:text="Paytm"/>
+
+        <Button
+            android:id="@+id/btn_bank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_21sp"
+            android:layout_marginTop="@dimen/margin_10"
+            android:background="@drawable/get_otp_bg"
+            android:textColor="#fff"
+            android:text="@string/bankAccount"
+            />
+
+    </LinearLayout>
+
+</RelativeLayout>
